--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
     "name": "my-vercel-project",
     "version": 2,
     "builds": [
-      { "src": "server.js", "use": "@vercel/node" }
+      { "src": "/server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "server.js" }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
