--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
