--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.2",
@@ -34,7 +35,8 @@
     "prom-client": "^15.1.1",
     "redis": "^4.6.13",
     "resend": "^3.2.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
