--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "express-validator": "^7.0.1",
     "file-type": "^19.0.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.9.0",
+    "googleapis": "^136.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
@@ -34,9 +37,12 @@
     "nodemailer": "^6.9.12",
     "prom-client": "^15.1.1",
     "redis": "^4.6.13",
+    "regex": "^0.1.1",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
-    "url": "^0.11.3"
+    "stream": "^0.0.2",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
