--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.9.0",
     "googleapis": "^136.0.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mime-types": "^2.1.35",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
@@ -40,6 +42,7 @@
     "regex": "^0.1.1",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.5",
     "stream": "^0.0.2",
     "url": "^0.11.3",
     "util": "^0.12.5"
