--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mime-types": "^2.1.35",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
