--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -40,7 +41,7 @@
     "node-modules": "^1.0.1",
     "nodemailer": "^6.9.12",
     "prom-client": "^15.1.1",
-    "redis": "^4.6.13",
+    "redis": "^4.6.14",
     "regex": "^0.1.1",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
